--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -685,11 +685,12 @@ Settings Tabs
 }
 
 .btcpaywall_tipping_templates img {
-  height: 300px;
-  width: 300px;
+  height: 150px;
+  width: 150px;
 }
 
 .btcpaywall_field_wrap {
+  display: flex;
   border-bottom: 1px solid #eee;
   margin: 0;
   padding: 20px;
@@ -718,4 +719,46 @@ Settings Tabs
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #c3c4c7;
+}
+
+/*Helper incons*/
+.btcpaywall_helper_tip {
+  font-family: Dashicons;
+  speak: never;
+  font-weight: 400;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+  text-indent: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  content: "\f223";
+  cursor: help;
+}
+
+
+.btcpaywall_container_body .btcpaywall_helper_tip {
+  padding: 0;
+  margin: -4px 0 0 5px;
+  vertical-align: middle;
+  cursor: help;
+  line-height: 1;
+}
+
+.btcpaywall_helper_tip {
+  color: #666;
+  display: inline-block;
+  font-size: 1.1em;
+  font-style: normal;
+  height: 16px;
+  line-height: 16px;
+  position: relative;
+  vertical-align: middle;
+  width: 16px;
 }
