--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -722,43 +722,25 @@ Settings Tabs
 }
 
 /*Helper incons*/
-.btcpaywall_helper_tip {
-  font-family: Dashicons;
-  speak: never;
-  font-weight: 400;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  margin: 0;
-  text-indent: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  content: "\f223";
-  cursor: help;
-}
 
 
-.btcpaywall_container_body .btcpaywall_helper_tip {
+/* .btcpaywall_container_body .btcpaywall_helper_tip {
   padding: 0;
   margin: -4px 0 0 5px;
   vertical-align: middle;
   cursor: help;
   line-height: 1;
-}
+} */
 
-.btcpaywall_helper_tip {
-  color: #666;
-  display: inline-block;
-  font-size: 1.1em;
-  font-style: normal;
-  height: 16px;
-  line-height: 16px;
-  position: relative;
-  vertical-align: middle;
-  width: 16px;
+.btcpaywall_helper_tip::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f059";
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  margin: 5px;
+  text-indent: 0;
+  text-align: center;
 }
