--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -656,9 +656,7 @@ Settings Tabs
 
 /*Tipping metabox*/
 
-/* .btcpaywall_metabox_wrap {
-  background-color: #f4f0ec;
-} */
+
 
 .btcpaywall_metabox_wrap_metabox_tabs {
   background-color: #1d59a2;
@@ -707,6 +705,8 @@ Settings Tabs
 
 .btcpaywall_field_wrap div:nth-child(1),
 .btcpaywall_field_wrap div:nth-child(2) {
+  display: flex;
+  align-items: center;
   width: 49%;
 }
 
@@ -750,7 +750,6 @@ Settings Tabs
   text-transform: none;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
-  margin-left: -30px;
   text-indent: 0;
   text-align: center;
 }
@@ -767,6 +766,7 @@ Settings Tabs
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   gap: 5px;
   width: 40%;
   border: solid 1px #ccc;
