Display chosen template

--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -749,6 +749,10 @@ Settings Tabs
   color: #fff;
 }
 
+.btcpaywall_chosen_template {
+  background: black;
+}
+
 /*Helper icon*/
 
 .btcpaywall_helper_tip::before {
