--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -712,11 +712,16 @@ Settings Tabs
   display: none;
 }
 
-.btcpaywall_field_wrap div:nth-child(1),
+.btcpaywall_field_wrap div:nth-child(1) {
+  display: flex;
+  align-items: center;
+  width: 30%;
+}
+
 .btcpaywall_field_wrap div:nth-child(2) {
   display: flex;
   align-items: center;
-  width: 49%;
+  width: 69%;
 }
 
 .btcpaywall_field_wrap input[type="text"],
