Add shortcode box to Tipping && add warning when user tries to reload page with unsaved changes

--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -754,8 +754,8 @@ Settings Tabs
   color: #fff;
 }
 
-.btcpaywall_chosen_template {
-  background: black;
+.btcpaywall_container_body.global-body {
+  display: block;
 }
 
 /*Helper icon*/
