Rename Tipping CPT

--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -793,5 +793,5 @@ Settings Tabs
 }
 
 .btcpaywall_tipping_templates button.activated {
-  background-color: rebeccapurple;
+  background-color: red;
 }
