Remove old Donation shortcode generator

--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -804,6 +804,7 @@ Settings Tabs
   border-radius: 5px;
   text-align: center;
   line-height: 1.1;
+  border: none;
 }
 
 .btcpaywall_tipping_image_wrap {
