Redesign Donation page

--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -656,7 +656,10 @@ Settings Tabs
 
 /*Tipping metabox*/
 
-
+#btcpaywall_template_appearance,
+.btcpaywall_tipping_selected_template {
+  display: none;
+}
 
 .btcpaywall_metabox_wrap_metabox_tabs {
   background-color: #1d59a2;
@@ -739,9 +742,9 @@ Settings Tabs
   width: 100px;
 }
 
-.btcpaywall_container_body {
+/* .btcpaywall_container_body {
   display: none;
-}
+} */
 
 .btcpaywall_container_header {
   display: flex;
@@ -755,6 +758,16 @@ Settings Tabs
   color: #fff;
 }
 
+.btcpaywall_tipping_selected_template {
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #fafafa;
+  border-top: 1px solid #eee;
+  -moz-column-gap: 1rem;
+  column-gap: 1rem;
+  padding-block: 0.8125rem;
+  padding-inline: 1rem;
+}
 
 /*Helper icon*/
 
@@ -771,6 +784,7 @@ Settings Tabs
 }
 
 /*Templates*/
+
 .btcpaywall_tipping_templates {
   display: flex;
   flex-wrap: wrap;
@@ -784,7 +798,6 @@ Settings Tabs
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  gap: 5px;
   width: 40%;
   border: solid 3px #ccc;
   background-color: rgb(252, 249, 249);
@@ -810,4 +823,11 @@ Settings Tabs
 .btcpaywall_tipping_image_wrap {
   max-width: 300px;
   overflow: hidden;
+}
+
+/*Demo Page*/
+
+.btcpaywall-demo-container {
+  display: flex;
+  justify-content: space-evenly;
 }
