--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -695,7 +695,7 @@ Settings Tabs
 }
 
 .btcpaywall_tipping_templates img {
-  width: 100%;
+  width: 200px;
   object-fit: contain;
   height: 200px;
 }
@@ -762,11 +762,8 @@ Settings Tabs
   justify-content: space-evenly;
   align-items: center;
   background-color: #fafafa;
-  border-top: 1px solid #eee;
-  -moz-column-gap: 1rem;
-  column-gap: 1rem;
-  padding-block: 0.8125rem;
-  padding-inline: 1rem;
+  border: 1px solid #eee;
+  padding: 10px 14px;
 }
 
 /*Helper icon*/
@@ -787,6 +784,7 @@ Settings Tabs
 
 .btcpaywall_tipping_templates {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 5px;
@@ -794,11 +792,10 @@ Settings Tabs
 
 .btcpaywall_tipping_templates>div {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
-  width: 40%;
+  width: 100%;
   border: solid 3px #ccc;
   background-color: rgb(252, 249, 249);
 }
@@ -810,9 +807,22 @@ Settings Tabs
   background-color: #fff;
 }
 
+/*Inactive buttons*/
 .btcpaywall_tipping_templates button {
   color: #fff;
   background-color: #51b13e;
+  padding: 10px 12px;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 1.1;
+  border: none;
+}
+
+/*Active button*/
+.btcpaywall_tipping_selected_template button {
+  color: #2271b1;
+  border-color: #2271b1;
+  background: #f6f7f7;
   padding: 10px 12px;
   border-radius: 5px;
   text-align: center;
