--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -895,7 +895,84 @@ Settings Tabs
   background: #f9f9f9;
 }
 
+/*Toast*/
+#btcpaywall_tipping_toast {
+  min-height: 0;
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  width: 400px;
+}
 
+.btcpaywall_tipping_toast {
+  background: #d6d8d9;
+  border-radius: 3px;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, .1);
+  color: rgba(0, 0, 0, .6);
+  cursor: default;
+  margin-bottom: 20px;
+  opacity: 0;
+  position: relative;
+  padding: 20px;
+  transform: translateY(15%);
+  transition: opacity .5s ease-in-out, transform .5s ease-in-out;
+  width: 100%;
+  will-change: opacity, transform;
+  z-index: 1100;
+}
+
+/* #toasts .toast.success {
+  background: #26d68a;
+}
+
+#toasts .toast.warning {
+  background: #ffa533;
+}
+
+#toasts .toast.info {
+  background: #2cbcff;
+}
+
+#toasts .toast.error {
+  background: #f44336;
+} */
+.btcpaywall_tipping_toast {
+  display: flex;
+  align-items: center;
+}
+
+.btcpaywall_tipping_toast p {
+  font-size: 16px;
+  padding: 10px;
+  color: #fff;
+}
+
+.btcpaywall_tipping_toast.show {
+  background: #17a2b8;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity .5s ease-in-out, transform .5s ease-in-out;
+}
+
+.btcpaywall_tipping_toast.hide {
+  height: 0;
+  margin: 0;
+  opacity: 0;
+  overflow: hidden;
+  padding: 0 30px;
+  transition: all .5s ease-in-out;
+}
+
+.btcpaywall_tipping_toast .close {
+  cursor: pointer;
+  font-size: 24px;
+  height: 16px;
+  margin-top: -10px;
+  position: absolute;
+  right: 14px;
+  top: 50%;
+  width: 16px;
+}
 
 /*Demo Page*/
 
