--- a/assets/src/css/btc-paywall-public.css
+++ b/assets/src/css/btc-paywall-public.css
@@ -1245,7 +1245,25 @@ div.btcpw_page_header_container>div:nth-child(2) {
   width: 250px;
   align-items: center;
 }
+/*Gutenberg Editor*/
+.components-button.btcpaywall.editor-post-featured-image__preview,
+.components-button.btcpaywall.editor-post-featured-image__toggle, 
+.components-button.btcpaywall.editor-post-featured-image__remove{
+  border: 1px solid #000;
+  padding: 10px;
+  margin: 10px 2px;
+  min-height: 40px;
+  background-color: #fff;
+  border-radius: 10px;
+}
 
+/* .btcpw_gutenberg_sel_num_control {
+  height: 50px;
+} */
+
+.btcpaywall_gutenberg_wrap{
+  margin:20px 10px;
+}
 /**
     Tipping button spinner
     
@@ -1263,9 +1281,7 @@ div.btcpw_page_header_container>div:nth-child(2) {
   animation: spinner 1s linear infinite;
 }
 
-.btcpw_gutenberg_sel_num_control {
-  height: 50px;
-}
+
 
 #btcpw_page h6 {
   font-family: sans-serif;
