--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -51,65 +51,7 @@ textarea:not(.btcpw_add_form_preview) {
   flex: 0.4;
 }
 
-/* .section > h1 {
-  font-size: 35px;
-  margin-bottom: 15px;
-  text-transform: uppercase;
-  font-weight: 400;
-  text-align: center;
-}
 
-.section.scroll {
-  height: 500px;
-  overflow: auto;
-}
-
-.section.table {
-  width: 100%;
-  font-family: Helvetica, Arial, sans-serif;
-  border-collapse: separate;
-  border-spacing: 0;
-  margin: 30px 0;
-  font-size: 0.9em;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.192);
-}
-
-.section.table thead tr th {
-  background-color: #1d5aa3;
-  color: #ffffff;
-  text-align: left;
-  font-size: 1.4em;
-}
-.section.table thead tr th {
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-}
-
-.section.table th,
-.section.table td {
-  padding: 15px 15px;
-}
-
-.section.table tbody tr {
-  border-bottom: 1px solid #dddddd;
-}
-
-.section.table tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
-}
-
-td.Expired,
-td.Invalid {
-  background-color: #f53c18;
-}
-td.Processing,
-td.New {
-  background-color: #f6b330;
-}
-td.Settled {
-  background-color: #269950;
-} */
 .btcpw_pay__gutenberg_block_separator {
   width: 100%;
   height: 25px;
@@ -214,25 +156,6 @@ td.Settled {
   font-size: 10px;
 }
 
-/* .btcpw_general_settings,
-.tipping_box_settings,
-.tipping_banner_high_settings,
-.tipping_banner_wide_settings,
-.tipping_page_settings,
-#btcpw_general_pay_per_post_options_paywall,
-#btcpw_general_pay_per_view_options_paywall,
-#btcpw_pay_per_file_paywall,
-#btcpw_general_content_store_options,
-#btcpw_misc_options,
-#btcpw_general_payment_gateway_options {
-  border: 1px solid #1e1e1e;
-  background: #fff;
-  padding: 0;
-  border-radius: 10px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  padding: 0 5px;
-} */
 .btcpw_general_settings,
 .tipping_box_settings,
 .tipping_banner_high_settings,
@@ -336,7 +259,9 @@ div.btcpw_help_link a:hover {
 #btcpw_pay_per_file_paywall,
 #btcpw_general_pay_per_post_options_paywall,
 #btcpw_general_pay_per_view_options_paywall,
-#btcpw_general_content_store_options {
+#btcpw_general_content_store_options,
+#btcpaywall_pay_per_post_shortcode_generator,
+#btcpaywall_pay_per_view_shortcode_generator {
   display: flex;
 }
 
@@ -345,7 +270,9 @@ div.btcpw_help_link a:hover {
 #btcpw_pay_per_file_paywall>div,
 #btcpw_general_pay_per_post_options_paywall>div,
 #btcpw_general_content_store_options>div,
-#btcpw_general_pay_per_view_options_paywall>div {
+#btcpw_general_pay_per_view_options_paywall>div,
+#btcpaywall_pay_per_post_shortcode_generator>div,
+#btcpaywall_pay_per_view_shortcode_generator>div {
   flex: 1;
 }
 
